[Ubuntu25.04] api/java_awt/GraphicsDevice/indexTGF.html#SetDisplayMode - setDisplayMode_REFRESH_RATE_UNKNOWN fails: Height is different on vnc

XMLWordPrintable

    • b09
    • b07
    • x86_64
    • linux_oracle, linux_ubuntu

        Testsuite name: JCK-runtime-8d
        TestName : api/java_awt/GraphicsDevice/indexTGF.html#SetDisplayMode
        Product(s) tested: jdk1.8.0_451b09
        OS/architecture: Oracle Linux 10.0(caused by missing JDK-8280991) , Also in Ubuntu 25.04

        Test result: Failed. test cases: 2; all failed; first test case failure: setDisplayMode_REFRESH_RATE_UNKNOWN

        Error message:
        The test fails with a msg "Height of the setdisplayMode and returned by getDisplayMode is different"

        Reproducible: Always
        Is it a Regression: No, Failure seen while OS baselining .
        Is it reproducible on other trains: Tried it on JDK 21u, 17u, 11u , 8u and its reproducible. only on 8u.
        Is it a platform specific issue: Yes, issue is seen only with OEL 10 And Ubuntu 25.04 platforms with JDK8

        Is it reproducible on OEL 9*: No
        Ubuntu- 24.04-No

          1. Test1.java
            1 kB
            Hari Prasad Kummari
          2. Test2.java
            3 kB
            Hari Prasad Kummari
          3. SetDisplayMode_21u_result.txt
            9 kB
            Hari Prasad Kummari
          4. ubuntu25_04_XwaylandLog.txt
            14 kB
            Hari Prasad Kummari

              Assignee:
              Alexander Zvegintsev
              Reporter:
              Aarti Bijlani (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              19 Start watching this issue

                Created:
                Updated:
                Resolved: